--- a/components/eamxx/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
+++ b/components/eamxx/tests/coupled/dynamics_physics/model_restart/CMakeLists.txt
@@ -117,4 +117,5 @@ configure_file(${SCREAM_SRC_DIR}/dynamics/homme/tests/theta.nl
                ${CMAKE_CURRENT_BINARY_DIR}/namelist.nl)
 
 # Ensure test input files are present in the data dir
-GetInputFile(init/${EAMxx_tests_IC_FILE_72lev})
+GetInputFile(scream/init/${EAMxx_tests_IC_FILE_72lev})
+GetInputFile(cam/topo/USGS-gtopo30_ne4np4_16x.c20160612.nc)
