EAMxx: split rrmtgp code that depends on yakl into a separate target

--- a/components/eamxx/src/physics/rrtmgp/CMakeLists.txt
+++ b/components/eamxx/src/physics/rrtmgp/CMakeLists.txt
@@ -2,40 +2,41 @@ include(EkatUtils)
 include(EkatSetCompilerFlags)
 include(ScreamUtils)
 
+##################################
+#             YAKL               #
+##################################
+
+# In case other E3SM components are building YAKL...
+if (TARGET yakl)
+  string (CONCAT msg
+    "It appears other parts of E3SM already built YAKL.\n"
+    "We are not preopared for this. Please, check the cmake\n"
+    "logic in EAMxx, so that we can use an existing yakl.")
+  message("${msg}")
+  message(FATAL_ERROR "Error! Aborting...")
+endif()
+# RRTMGP++ requires YAKL
+
 # Add CUDA flags for YAKL
-set(YAKL_CXX_FLAGS "")
 if (CUDA_BUILD)
   set(YAKL_ARCH "CUDA")
-  list(APPEND YAKL_CXX_FLAGS -DYAKL_ARCH_CUDA --expt-extended-lambda --expt-relaxed-constexpr)
+  set(YAKL_CUDA_FLAGS "-DYAKL_ARCH_CUDA --expt-extended-lambda --expt-relaxed-constexpr -ccbin ${CMAKE_CXX_COMPILER}")
 endif()
 if (HIP_BUILD)
   set(YAKL_ARCH "HIP")
-  list(APPEND YAKL_CXX_FLAGS "-DYAKL_ARCH_HIP -O3 -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -x hip ")
+  set(YAKL_HIP_FLAGS "-DYAKL_ARCH_HIP -O3 -D__HIP_ROCclr__ -D__HIP_ARCH_GFX90A__=1 --rocm-path=${ROCM_PATH} --offload-arch=gfx90a -x hip")
 endif()
 
+set (YAKL_SOURCE_DIR ${SCREAM_BASE_DIR}/../../externals/YAKL)
+add_subdirectory(${YAKL_SOURCE_DIR} ${CMAKE_BINARY_DIR}/externals/YAKL)
 
+# Set some additional flag/cpp option on the yakl target
 
-# RRTMGP++ requires YAKL
-add_subdirectory(${SCREAM_BASE_DIR}/../../externals/YAKL ${CMAKE_BINARY_DIR}/externals/YAKL)
-target_compile_options(yakl PUBLIC $<$<COMPILE_LANGUAGE:CXX>:${YAKL_CXX_FLAGS}>)
+cmake_policy (SET CMP0079 NEW) # Allow to link to a tgt from a different directory
 
-# If HAVE_MPI is defined, yakl needs to link against MPI. To be safe, we check
-# any CMake property that could make yakl see that CPP macro
-get_directory_property (DIR_DEFS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMPILE_DEFINITIONS )
-get_directory_property (DIR_FLAGS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} COMPILE_FLAGS )
-get_target_property(YAKL_FLAGS yakl COMPILE_FLAGS)
-get_target_property(YAKL_DEFS yakl COMPILE_DEFINITIONS)
-if ("${DIR_DEFS} ${DIR_FLAGS} ${YAKL_DEFS} ${YAKL_FLAGS} ${CMAKE_CXX_FLAGS}" MATCHES "HAVE_MPI")
-  cmake_policy (SET CMP0079 NEW)
-  find_package(MPI REQUIRED COMPONENTS C)
-  target_link_libraries (yakl PUBLIC MPI::MPI_C)
-  if (MPI_C_INCLUDE_DIRS)
-    target_include_directories (yakl PUBLIC ${MPI_C_INCLUDE_DIRS})
-  endif()
-  if (MPI_C_COMPILER_INCLUDE_DIRS)
-    target_include_directories (yakl PUBLIC ${MPI_C_COMPILER_INCLUDE_DIRS})
-  endif()
-endif()
+# EAMxx *requires* MPI, so simply look for it, then link against it
+find_package(MPI REQUIRED COMPONENTS C)
+target_link_libraries (yakl PUBLIC MPI::MPI_C)
 EkatDisableAllWarning(yakl)
 
 # For debug builds, set -DYAKL_DEBUG
@@ -43,6 +44,13 @@ string(TOLOWER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_ci)
 if (CMAKE_BUILD_TYPE_ci STREQUAL "debug")
   target_compile_definitions(yakl PUBLIC YAKL_DEBUG)
 endif()
+
+##################################
+#           RRTMGP               #
+##################################
+
+list(APPEND CMAKE_MODULE_PATH ${YAKL_SOURCE_DIR})
+include (yakl_utils)
 
 set(EAM_RRTMGP_DIR ${SCREAM_BASE_DIR}/../eam/src/physics/rrtmgp)
 # Build RRTMGP library; this builds the core RRTMGP external source as a library named "rrtmgp"
@@ -60,7 +68,12 @@ set(EXTERNAL_SRC
 add_library(rrtmgp ${EXTERNAL_SRC})
 EkatDisableAllWarning(rrtmgp)
 SetCudaFlags(rrtmgp)
-target_link_libraries(rrtmgp PUBLIC yakl)
+yakl_process_target(rrtmgp)
+
+# NOTE: cannot use 'PUBLIC' in target_link_libraries,
+#       since yakl_process_target already used it
+#       with the "plain" signature
+target_link_libraries(rrtmgp yakl)
 target_include_directories(rrtmgp PUBLIC
     ${SCREAM_BASE_DIR}/../../externals/YAKL
     ${EAM_RRTMGP_DIR}/external/cpp
@@ -81,24 +94,53 @@ target_link_options(rrtmgp PRIVATE -DKOKKOS_DEPENDENCE)
 # own build, and we would just use add_subdirectory() above to build it. Also, this
 # separates out the code that comprises the core RRTMGP library from the extensions
 # and examples that we have modified for use in SCREAM specifically.
-set(INTERFACE_SRC
-  atmosphere_radiation.cpp
+
+# However, due to the mix of YAKL and Kokkos, we split the target in two:
+#  - scream_rrtmgp: kokkos-based interface to EAMxx
+#  - scream_rrtmgp_yakl: source codes to be built with YAKL flags/options
+
+##################################
+#       SCREAM_RRTMGP_YAKL       #
+##################################
+
+set(SCREAM_RRTMGP_SOURCES_YAKL
+  atmosphere_radiation_yakl.cpp
   scream_rrtmgp_interface.cpp
   mo_garand_atmos_io.cpp
   mo_load_coefficients.cpp
   mo_load_cloud_coefficients.cpp
+)
+
+add_library(scream_rrtmgp_yakl ${SCREAM_RRTMGP_SOURCES_YAKL})
+yakl_process_target(scream_rrtmgp_yakl)
+
+# NOTE: cannot use 'PUBLIC' in target_link_libraries,
+#       since yakl_process_target already used it
+#       with the "plain" signature
+find_library(NETCDF_C netcdf HINTS ${NetCDF_C_PATH}/lib)
+target_link_libraries(scream_rrtmgp_yakl ${NETCDF_C} rrtmgp scream_share)
+target_include_directories(scream_rrtmgp_yakl PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(scream_rrtmgp_yakl SYSTEM PUBLIC
+    ${NetCDF_C_PATH}/include
+    ${EAM_RRTMGP_DIR}/external)
+
+##################################
+#        SCREAM_RRTMGP           #
+##################################
+
+set(SCREAM_RRTMGP_SOURCES
+  atmosphere_radiation.cpp
   shr_orb_mod_c2f.F90
 )
-add_library(scream_rrtmgp ${INTERFACE_SRC})
-find_library(NETCDF_C netcdf HINTS ${NetCDF_C_PATH}/lib)
-target_link_libraries(scream_rrtmgp PUBLIC ${NETCDF_C} rrtmgp yakl scream_share physics_share csm_share)
+
+add_library(scream_rrtmgp ${SCREAM_RRTMGP_SOURCES})
+target_link_libraries(scream_rrtmgp PUBLIC scream_share physics_share csm_share scream_rrtmgp_yakl)
 set_target_properties(scream_rrtmgp PROPERTIES
   Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules
 )
-target_include_directories(scream_rrtmgp SYSTEM PUBLIC
+target_include_directories(scream_rrtmgp PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
-    ${NetCDF_C_PATH}/include
-    ${EAM_RRTMGP_DIR}/external
     ${CMAKE_CURRENT_BINARY_DIR}/modules)
 
 # Ensure RRTMGP lookup tables are present in the data dir
