First success at test making netcdf file and then nudging T_mid to those values

--- a/components/eamxx/src/physics/nudging/tests/CMakeLists.txt
+++ b/components/eamxx/src/physics/nudging/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT SCREAM_BASELINES_ONLY)
   include(ScreamUtils)
 
-  set( NEED_LIBS scream_share nudging physics_share)
+  set( NEED_LIBS scream_share nudging physics_share scream_io)
 
   CreateUnitTest(nudging_tests "nudging_tests.cpp" "${NEED_LIBS}" LABELS "physics_nudging" )
 
