--- a/components/eamxx/src/share/CMakeLists.txt
+++ b/components/eamxx/src/share/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SHARE_SRC
   grid/point_grid.cpp
   grid/remap/abstract_remapper.cpp
   grid/remap/coarsening_remapper.cpp
+  grid/remap/vertical_remapper.cpp
   grid/remap/horizontal_remap_utility.cpp
   property_checks/property_check.cpp
   property_checks/field_nan_check.cpp
