--- a/components/eam/src/physics/crm/pam/CMakeLists.txt
+++ b/components/eam/src/physics/crm/pam/CMakeLists.txt
@@ -3,7 +3,8 @@ set(PAM_DRIVER_SRC
     pam_driver.F90  
     pam_driver.cpp 
     pam_feedback.h  
-    pam_rad_update.h  
+    pam_radiation.h  
+    pam_statistics.h  
     pam_state_update.h  
     params.F90)
 
