EAMxx: allow AD to fwd IC filename to GM to load geo data fields

--- a/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp_128levels/input.yaml
@@ -46,7 +46,7 @@ grids_manager:
   Type: Homme
   physics_grid_type: GLL
   dynamics_namelist_file_name: namelist.nl
-  vertical_coordinate_filename: ${SCREAM_DATA_DIR}/init/${EAMxx_tests_IC_FILE_128lev}
+  vertical_coordinate_filename: IC_FILE
 
 # The parameters for I/O control
 Scorpio:
