--- a/components/eamxx/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
+++ b/components/eamxx/tests/coupled/physics_only/shoc_cld_p3_rrtmgp/input.yaml
@@ -33,6 +33,7 @@ grids_manager:
   Type: Mesh Free
   number_of_global_columns:   218
   number_of_vertical_levels:  72  # Will want to change to 128 when a valid unit test is available.
+  geo_data_source: IC_FILE
 
 initial_conditions:
   # The name of the file containing the initial conditions for this test.
@@ -46,9 +47,6 @@ initial_conditions:
   aero_ssa_sw: 0.0
   aero_tau_sw: 0.0
   aero_tau_lw: 0.0
-  Load Latitude:  true
-  Load Longitude: true
-  Load Hybrid Coefficients: true
 
 # The parameters for I/O control
 Scorpio:
