--- a/components/eamxx/tests/uncoupled/rrtmgp/input.yaml
+++ b/components/eamxx/tests/uncoupled/rrtmgp/input.yaml
@@ -29,6 +29,7 @@ grids_manager:
   Type: Mesh Free
   number_of_global_columns: 218
   number_of_vertical_levels: 72
+  geo_data_source: IC_FILE
 
 # Specifications for setting initial conditions
 initial_conditions:
@@ -37,8 +38,6 @@ initial_conditions:
   aero_ssa_sw: 0.0
   aero_tau_sw: 0.0
   aero_tau_lw: 0.0
-  Load Latitude:  true
-  Load Longitude: true
 
 # The parameters for I/O control
 Scorpio:
