--- a/components/eamxx/tests/uncoupled/shoc/input.yaml
+++ b/components/eamxx/tests/uncoupled/shoc/input.yaml
@@ -18,6 +18,7 @@ grids_manager:
   Type: Mesh Free
   number_of_global_columns:   218
   number_of_vertical_levels:  72  # Will want to change to 128 when a valid unit test is available.
+  geo_data_source: IC_FILE
 
 initial_conditions:
   # The name of the file containing the initial conditions for this test.
@@ -25,8 +26,6 @@ initial_conditions:
   topography_filename: ${TOPO_DATA_DIR}/USGS-gtopo30_ne4np4_16x.c20160612.nc
   surf_sens_flux: 0.0
   surf_evap: 0.0
-  Load Latitude: true
-  Load Hybrid Coefficients: true
 
 # The parameters for I/O control
 Scorpio:
