--- a/components/eamxx/src/physics/nudging/CMakeLists.txt
+++ b/components/eamxx/src/physics/nudging/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(nudging atmosphere_nudging.cpp)
 target_include_directories(nudging PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../share)
-target_link_libraries(nudging PUBLIC scream_share)
+#target_link_libraries(nudging PUBLIC scream_share)
+target_link_libraries(nudging physics_share scream_share)
+#target_compile_options(nudging PUBLIC)
 
 if (NOT SCREAM_LIB_ONLY)
   add_subdirectory(tests)
