Add an io_remap test to ensure that remapped output is correct.
This commit adds the new test 'io_remap_test' which checks that
remapped output is correct.  The new test makes sure that masked
values are in fact masked as expected.

The only configuration not yet tested is vertical+horizontal.  That
will be the subject of a subquent commit.

--- a/components/eamxx/src/share/io/tests/CMakeLists.txt
+++ b/components/eamxx/src/share/io/tests/CMakeLists.txt
@@ -42,3 +42,9 @@ foreach (MPI_RANKS RANGE 1 ${SCREAM_TEST_MAX_RANKS})
   set_property(TEST io_test_restart_check_np${MPI_RANKS}
                PROPERTY FIXTURES_REQUIRED restart_setup)
 endforeach()
+
+## Test remap output
+CreateUnitTest(io_remap_test "io_remap_test.cpp" "scream_io;diagnostics" LABELS "io,remap"
+  MPI_RANKS 1 ${SCREAM_TEST_MAX_RANKS}
+)
+
