--- a/components/eamxx/src/physics/mam4/CMakeLists.txt
+++ b/components/eamxx/src/physics/mam4/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(mam4 atmosphere_aerosols.cpp)
+add_library(mam4 aerosol_microphysics.cpp)
 add_dependencies(mam4 mam4xx_proj)
 target_include_directories(mam4 PRIVATE
   ${PROJECT_BINARY_DIR}/externals/haero/include
