CMake update for CUDA

--- a/components/eam/src/physics/crm/pam/CMakeLists.txt
+++ b/components/eam/src/physics/crm/pam/CMakeLists.txt
@@ -11,6 +11,11 @@ set(PAM_DRIVER_SRC
 add_library(pam_driver 
            ${PAM_DRIVER_SRC})
 
+if (${USE_CUDA})
+  # PAM will be CUDA-linked with device symbols resolved at library creation
+  set_target_properties(pam_driver PROPERTIES LINKER_LANGUAGE CUDA CUDA_SEPARABLE_COMPILATION OFF CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+endif()
+
 set(PAM_DYCORE awfl)
 set(PAM_MICRO  p3)
 set(PAM_SGS    shoc)
