EAMxx: Remove pointless nc file self-comparison

--- a/components/eamxx/tests/uncoupled/spa/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/spa/CMakeLists.txt
@@ -37,7 +37,9 @@ if (TEST_RANK_END GREATER TEST_RANK_START)
   include (BuildCprnc)
   BuildCprnc()
   SET (BASE_TEST_NAME "spa")
-  foreach (MPI_RANKS RANGE ${TEST_RANK_START} ${TEST_RANK_END})
+  math (EXPR CMP_RANK_START ${TEST_RANK_START}+1)
+  foreach (MPI_RANKS RANGE ${CMP_RANK_START} ${TEST_RANK_END})
+
     set (SRC_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${MPI_RANKS}.nc")
     set (TGT_FILE "${BASE_TEST_NAME}_standalone_output.INSTANT.nsteps_x1.np${TEST_RANK_START}.nc")
     set (TEST_NAME "${BASE_TEST_NAME}_np${TEST_RANK_START}_vs_np${MPI_RANKS}_bfb")
