--- a/components/eamxx/tests/uncoupled/shoc/shoc_standalone_output.yaml
+++ b/components/eamxx/tests/uncoupled/shoc/shoc_standalone_output.yaml
@@ -12,6 +12,9 @@ Fields:
       - horiz_winds
       - U
       - V
+      - surf_mom_flux
+      - surf_mom_flux_U
+      - surf_mom_flux_V
       - qv
       - qc
       - sgs_buoy_flux
