--- a/components/eamxx/CMakeLists.txt
+++ b/components/eamxx/CMakeLists.txt
@@ -160,6 +160,7 @@ set(DEFAULT_FPMODEL "precise")
 set(DEFAULT_MPIRUN_EXE "mpiexec")
 set(DEFAULT_MPI_EXTRA_ARGS "--bind-to core")
 set(DEFAULT_MPI_NP_FLAG "--map-by")
+set(DEFAULT_MPI_THREAD_FLAG "")
 set(DEFAULT_LIB_ONLY FALSE)
 if (SCREAM_CIME_BUILD)
   set(DEFAULT_LIB_ONLY TRUE)
@@ -207,6 +208,7 @@ set(SCREAM_MPI_ERRORS_ARE_FATAL TRUE CACHE BOOL "Whether MPI errors should abort
 set(SCREAM_MPIRUN_EXE ${DEFAULT_MPIRUN_EXE} CACHE STRING "The executable name for mpirun")
 set(SCREAM_MPI_EXTRA_ARGS ${DEFAULT_MPI_EXTRA_ARGS} CACHE STRING "Options for mpirun")
 set(SCREAM_MPI_NP_FLAG ${DEFAULT_MPI_NP_FLAG} CACHE STRING "The mpirun flag for designating the total number of ranks")
+set(SCREAM_MPI_THREAD_FLAG ${DEFAULT_MPI_THREAD_FLAG} CACHE STRING "The mpirun flag for designating the number of threads")
 set(SCREAM_LIB_ONLY ${DEFAULT_LIB_ONLY} CACHE BOOL "Only build libraries, no exes")
 set(NetCDF_Fortran_PATH ${DEFAULT_NetCDF_Fortran_PATH} CACHE FILEPATH "Path to netcdf fortran installation")
 set(NetCDF_C_PATH ${DEFAULT_NetCDF_C_PATH} CACHE FILEPATH "Path to netcdf C installation")
