fix some copy/paste bugs

--- a/components/eamxx/src/physics/CMakeLists.txt
+++ b/components/eamxx/src/physics/CMakeLists.txt
@@ -13,5 +13,5 @@ if (SCREAM_TEST_LEVEL GREATER_EQUAL SCREAM_TEST_LEVEL_EXPERIMENTAL)
   add_subdirectory(zm)
 endif()
 add_subdirectory(cld_fraction)
-add_subdirectory(ml_nudging)
+add_subdirectory(ml_nudge)
 add_subdirectory(spa)
