--- a/components/eamxx/data/scream_default_output.yaml
+++ b/components/eamxx/data/scream_default_output.yaml
@@ -69,4 +69,8 @@ output_control:
 Checkpoint Control:
   Frequency: ${REST_N}
   frequency_units: ${REST_OPTION}
+  MPI Ranks in Filename: false
+  Timestamp in Filename: true
+  avg_type_in_filename: false
+  frequency_in_filename: false
 ...
