add unit test for modifying view from Python

--- a/components/eamxx/tests/uncoupled/CMakeLists.txt
+++ b/components/eamxx/tests/uncoupled/CMakeLists.txt
@@ -9,6 +9,7 @@ if (NOT SCREAM_BASELINES_ONLY)
   add_subdirectory(cld_fraction)
   add_subdirectory(spa)
   add_subdirectory(surface_coupling)
+  add_subdirectory(ml_nudge)
   if (SCREAM_DOUBLE_PRECISION)
     add_subdirectory(rrtmgp)
   else()
