Change the KEY in output control from Casename to filename_prefix
It was decided that "Casename" is too abiguous for a KEY to control
what the output filename would be in IO.  A more descriptive key of
filename_prefix was preferred.  This commit makes those necessary
changes.

NOTE! All users will have to update their output control files
to use the new key.

--- a/components/eamxx/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/model_restart/input_initial.yaml
@@ -57,7 +57,7 @@ grids_manager:
 # List all the yaml files with the output parameters
 Scorpio:
   model_restart:
-    Casename: model_restart
+    filename_prefix: model_restart
     output_control:
       Frequency:       1
       frequency_units: nsteps
