--- a/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/homme_shoc_cld_spa_p3_rrtmgp_output.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/homme_shoc_cld_spa_p3_rrtmgp/homme_shoc_cld_spa_p3_rrtmgp_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: homme_shoc_cld_spa_p3_rrtmgp_output
+filename_prefix: homme_shoc_cld_spa_p3_rrtmgp_output
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Fields:
