--- a/components/eamxx/tests/coupled/dynamics_physics/model_restart/model_output.yaml
+++ b/components/eamxx/tests/coupled/dynamics_physics/model_restart/model_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: model_output_baseline
+filename_prefix: model_output_baseline
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Fields:
