--- a/components/eamxx/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
+++ b/components/eamxx/tests/coupled/physics_only/atm_proc_subcycling/output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: shoc_p3_${POSTFIX}
+filename_prefix: shoc_p3_${POSTFIX}
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Field Names:
