--- a/components/eamxx/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/shoc_cld_spa_p3_rrtmgp_output.yaml
+++ b/components/eamxx/tests/coupled/physics_only/shoc_cld_spa_p3_rrtmgp/shoc_cld_spa_p3_rrtmgp_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: shoc_cld_spa_p3_rrtmgp_output
+filename_prefix: shoc_cld_spa_p3_rrtmgp_output
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Field Names:
