--- a/components/eamxx/tests/uncoupled/homme/homme_standalone_output.yaml
+++ b/components/eamxx/tests/uncoupled/homme/homme_standalone_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: homme_standalone_output
+filename_prefix: homme_standalone_output
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Fields:
