--- a/components/eamxx/tests/uncoupled/surface_coupling/surface_coupling_output.yaml
+++ b/components/eamxx/tests/uncoupled/surface_coupling/surface_coupling_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: surface_coupling_output
+filename_prefix: surface_coupling_output
 Averaging Type: Instant
 Max Snapshots Per File: 1
 Fill Value: 0.0
