--- a/components/eamxx/data/scream_default_output.yaml
+++ b/components/eamxx/data/scream_default_output.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 ---
-Casename: ${CASE}.scream.hi
+filename_prefix: ${CASE}.scream.hi
 # WARNING: ERS/ERP tets will override this with AVERAGE
 Averaging Type: Instant
 Max Snapshots Per File: 744 # One output every 31 days
